Close streams and other small fixes.