@@ -32,7 +32,7 @@ public abstract class Array {
         if (array instanceof long[]) return new Long(((long[])array)[index]);
         if (array instanceof float[]) return new Float(((float[])array)[index]);
         if (array instanceof double[]) return new Double(((double[])array)[index]);
-        if (array instanceof boolean[]) return new Boolean(((boolean[])array)[index]);
+        if (array instanceof boolean[]) return Boolean.valueOf(((boolean[])array)[index]);
         if (array instanceof byte[]) return new Byte(((byte[])array)[index]);
         if (array instanceof short[]) return new Short(((short[])array)[index]);
         if (array instanceof char[]) return new Character(((char[])array)[index]);
